# pytest-geoqc

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: download_data.py  verify_data.py
src/pytest_geoqc/: core.py
tests/: test_core.py
