[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-geoqc"
version = "0.1.0"
description = "GIS Quality Control with pytest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "shapely"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
addopts = "-v --tb=short"
